--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "scripts": {
         "start": "node ./index.js",
         "server": "nodemon ./index.js",
-        "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
+        "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
+        "dev": "concurrently \"npm run server\" \"npm run css\"",
+        "db:import": "node ./seed/seeder.js -i",
+        "db:delete": "node ./seed/seeder.js -d"
     },
     "keywords": [
         "MVC",
@@ -34,6 +37,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.17",
+        "concurrently": "^8.2.2",
         "nodemon": "^3.0.3",
         "postcss": "^8.4.35",
         "postcss-cli": "^11.0.0",
